--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                         </svg>
 
                         <h2 class="shop__card__title">Netflix VM CFG</h2>
-                        <p class="shop__card__description">VM means that it checks the accounts with a virtual machine.</p>
+                        <p class="shop__card__description"></p>
                         <p class="shop__card__price">Price <span>$70</span></p>
 
                         <div data-sellix-product="1111111"
