--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
                               stroke-linejoin="round" stroke-width="2"/>
                     </svg>
                 </div>
-                Safe and checked store
+                This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.
             </div>
 
             <a href="#about" class="header__arrow">
@@ -162,7 +169,7 @@
         <div class="shop__categories">
 
             <div class="shop__category active" data-category-index="1">
-                Cheap Accounts
+                Accounts
             </div>
 
             <div class="shop__category" data-category-index="2">
@@ -174,7 +181,7 @@
             </div>
 
             <div class="shop__category" data-category-index="4">
-                Combolists | ULP | Stealer Logs
+                Combolists | ULP
             </div>
 
             <div class="shop__category" data-category-index="5">
@@ -574,7 +581,7 @@
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Spotify CFG</h2>
+                        <h2 class="shop__card__title">Spotify Full Capture Config W/ CC</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$50</span></p>
@@ -605,7 +612,7 @@
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Xbox CFG</h2>
+                        <h2 class="shop__card__title">Xbox Full Capture Config W/ CC</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$50</span></p>
@@ -636,7 +643,7 @@
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Netflix VM CFG</h2>
+                        <h2 class="shop__card__title">Netflix VM + Sub Full Capture</h2>
                         <p class="shop__card__description"></p>
                         <p class="shop__card__price">Price <span>$70</span></p>
 
@@ -666,7 +673,7 @@
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">PSN CFG</h2>
+                        <h2 class="shop__card__title">PSN Full Capture Config W/ CC</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$50</span></p>
@@ -697,7 +704,7 @@
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">FortNite CFG</h2>
+                        <h2 class="shop__card__title">Fortnite Full Capture Config</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$50</span></p>
