--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>zzsstock.org</title>
+    <title> zz's stock #1 Budgeted Shop</title>
 
     <!--  CSS  -->
     <link rel="stylesheet" href="https://cdn.sellix.io/static/css/embed.css">
@@ -133,7 +133,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
 
         <div class="about__content">
 
-            <h1 class="about__title">Need Support?</h1>
+            <h1 class="about__title">If you’re in need of support for a product you purchased or just want to say hi, please contact us by tapping the button below</h1>
             <p class="about__description">Contact us at https://t.me/nuraleaks</p>
 
             <div class="about__cards">
@@ -181,7 +181,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
             </div>
 
             <div class="shop__category" data-category-index="4">
-                Combolists | ULP
+                Combolists
             </div>
 
             <div class="shop__category" data-category-index="5">
@@ -326,7 +326,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Spotify</h2>
+                        <h2 class="shop__card__title">Spotify Account With Premium</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$2.00</span></p>
@@ -357,7 +357,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Paramount</h2>
+                        <h2 class="shop__card__title">Paramount Accounts</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$4.00</span></p>
@@ -388,7 +388,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Steam</h2>
+                        <h2 class="shop__card__title">Steam w/ 0-100 Games</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$5.00</span></p>
@@ -742,7 +742,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Setting Up SilverBullet</h2>
+                        <h2 class="shop__card__title">Setting Up SilverBullet & OpenBullet</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$10.00</span></p>
@@ -765,6 +765,8 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
 
                 </div>
 
+		
+
                 <div class="col-lg-4">
 
                     <div class="shop__card">
@@ -773,7 +775,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                             <path id="shield" d="M18.859,39.149s14.859-7.43,14.859-18.574v-13L18.859,2,4,7.572v13C4,31.719,18.859,39.149,18.859,39.149Z" transform="translate(-2)" fill="none" stroke="#cf9816" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"/>
                         </svg>
 
-                        <h2 class="shop__card__title">Making a CFG</h2>
+                        <h2 class="shop__card__title">High Quality Config Making tutorial, in depth guide.</h2>
                         <p class="shop__card__description"></p>
 
                         <p class="shop__card__price">Price <span>$30.00</span></p>
