--- a/index.html
+++ b/index.html
@@ -85,14 +85,12 @@
         <div class="header__content">
 
             <h1 class="header__title">
-                zz’s
-                <span>Shop</span>
+                Welcome to zz's 
+                <span>Stock!</span>
             </h1>
 
             <p class="header__description">
-                Searching for a reliable source to buy accounts with mail access? Look no further. 
-                We specialize in offering premium accounts and optimized configurations to help you 
-                achieve success in your pursuits. Join us now and unlock your potential.
+                Quality accounts, for the cheapest prices.
 
             </p>
 
@@ -133,7 +131,7 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
 
         <div class="about__content">
 
-            <h1 class="about__title">If you’re in need of support for a product you purchased or just want to say hi, please contact us by tapping the button below</h1>
+            <h1 class="about__title">Need Support?</h1>
             <p class="about__description">Contact us at https://t.me/nuraleaks</p>
 
             <div class="about__cards">
@@ -203,7 +201,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Netflix</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$4.00</span></p>
 
@@ -234,7 +239,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Disney+</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$4.00$</span></p>
 
@@ -265,7 +277,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Hulu</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$4.00$</span></p>
 
@@ -296,7 +315,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">HBO Max</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$4.00</span></p>
 
@@ -327,7 +353,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Spotify Account With Premium</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$2.00</span></p>
 
@@ -358,7 +391,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Paramount Accounts</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$4.00</span></p>
 
@@ -389,7 +429,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Steam w/ 0-100 Games</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$5.00</span></p>
 
@@ -420,7 +467,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Xbox W/ CC</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$6.00</span></p>
 
@@ -451,7 +505,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">PSN W/ Random amount of games</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$5.00</span></p>
 
@@ -482,7 +543,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">PSN W/ 50-100 games</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$20.00</span></p>
 
@@ -513,7 +581,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Fortnite with random skins</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$5.00</span></p>
 
@@ -544,7 +619,14 @@ If you receive an account that doesn’t work, please kindly send us a video, & 
                         </svg>
 
                         <h2 class="shop__card__title">Fortnite with 50-100 skins</h2>
-                        <p class="shop__card__description"></p>
+                        <p class="shop__card__description">This account is MAIL ACCESS. Once you sign in, you must change the email to gain full access over the account.
+
+Anything that happens after purchasing this product is completely on the buyer, we hold 0 accountability.
+
+We do not accept refunds, all products that are sold are final.
+
+
+If you receive an account that doesn’t work, please kindly send us a video, & proof of your purchase to our telegram. Otherwise, we cannot give you a new account and or a refund.</p>
 
                         <p class="shop__card__price">Price <span>$20.00</span></p>
 
